--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//src/Doc/Doc2M010.java=UTF-8
 encoding//src/Farglory/util/KUtils.java=UTF-8
+encoding//src/Invoice/InvoR010Class/InvoicePrint_Elec.java=UTF-8
 encoding//src/Sale/AML/CheckAML2.java=UTF-8
