折讓日期判斷

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -3,5 +3,6 @@ encoding//src/Doc/Doc2M010.java=UTF-8
 encoding//src/Farglory/util/KTools.java=UTF-8
 encoding//src/Farglory/util/KUtils.java=UTF-8
 encoding//src/Invoice/InvoM030/func/InvoM030_New.java=UTF-8
+encoding//src/Invoice/InvoM040/func/DisCount_New.java=UTF-8
 encoding//src/Invoice/InvoR010Class/InvoicePrint_Elec.java=UTF-8
 encoding//src/Sale/AML/CheckAML2.java=UTF-8
