--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -6,3 +6,7 @@ encoding//src/Invoice/InvoM030/func/InvoM030_New.java=UTF-8
 encoding//src/Invoice/InvoM040/func/DisCount_New.java=UTF-8
 encoding//src/Invoice/InvoR010Class/InvoicePrint_Elec.java=UTF-8
 encoding//src/Sale/AML/CheckAML2.java=UTF-8
+encoding//src/\u767C\u7968_\u6298\u8B93\u4F5C\u5EE2.java=UTF-8
+encoding//src/\u767C\u7968_\u6298\u8B93\u958B\u7ACB.java=UTF-8
+encoding//src/\u767C\u7968_\u767C\u7968\u4F5C\u5EE2.java=UTF-8
+encoding//src/\u767C\u7968_\u767C\u7968\u958B\u7ACB.java=UTF-8
