--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,11 +2,15 @@ eclipse.preferences.version=1
 encoding//src/Doc/Doc2M010.java=UTF-8
 encoding//src/Farglory/util/KTools.java=UTF-8
 encoding//src/Farglory/util/KUtils.java=UTF-8
+encoding//src/Farglory/util/RiskCheck.java=UTF-8
+encoding//src/Farglory/util/RiskCheckBean.java=UTF-8
 encoding//src/Invoice/InvoM030/func/InvoM030_New.java=UTF-8
 encoding//src/Invoice/InvoM040/func/DisCount_New.java=UTF-8
 encoding//src/Invoice/InvoR010Class/InvoicePrint_Elec.java=UTF-8
 encoding//src/Invoice/vo/InvoicePrintVo.java=UTF-8
 encoding//src/Sale/AML/CheckAML2.java=UTF-8
+encoding//src/\u6536\u6B3E_\u63DB\u540D_btnRiskCheck.java=UTF-8
+encoding//src/\u6536\u6B3E_\u8CFC\u5C4B\u8B49\u660E\u55AE_btnRiskCheck.java=UTF-8
 encoding//src/\u767C\u7968_\u6298\u8B93\u4F5C\u5EE2.java=UTF-8
 encoding//src/\u767C\u7968_\u6298\u8B93\u958B\u7ACB.java=UTF-8
 encoding//src/\u767C\u7968_\u767C\u7968\u4F5C\u5EE2.java=UTF-8
