--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,7 @@ encoding//src/Farglory/util/KTools.java=UTF-8
 encoding//src/Farglory/util/KUtils.java=UTF-8
 encoding//src/Farglory/util/RiskCheck.java=UTF-8
 encoding//src/Farglory/util/RiskCheckBean.java=UTF-8
+encoding//src/Farglory/util/SendMailBean.java=UTF-8
 encoding//src/Invoice/InvoM030/func/InvoM030_New.java=UTF-8
 encoding//src/Invoice/InvoM040/func/DisCount_New.java=UTF-8
 encoding//src/Invoice/InvoR010Class/InvoicePrint_Elec.java=UTF-8
