210114 鈺淵拆分ZIP前

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,9 +2,11 @@ eclipse.preferences.version=1
 encoding//src/Doc/Doc2M010.java=UTF-8
 encoding//src/Farglory/util/KTools.java=UTF-8
 encoding//src/Farglory/util/KUtils.java=UTF-8
+encoding//src/Farglory/util/RiskBenBean.java=UTF-8
 encoding//src/Farglory/util/RiskCheck.java=UTF-8
 encoding//src/Farglory/util/RiskCheckBean.java=UTF-8
 encoding//src/Farglory/util/RiskCheckRS.java=UTF-8
+encoding//src/Farglory/util/RiskCustomBean.java=UTF-8
 encoding//src/Farglory/util/SendMailBean.java=UTF-8
 encoding//src/Invoice/InvoM030/func/InvoM030_New.java=UTF-8
 encoding//src/Invoice/InvoM040/func/DisCount_New.java=UTF-8
