--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -14,6 +14,7 @@ encoding//src/Invoice/InvoR010/InvoicePrint_Elec.java=UTF-8
 encoding//src/Invoice/vo/InvoicePrintVo.java=UTF-8
 encoding//src/Sale/AML/CheckAML2.java=UTF-8
 encoding//src/Sale/AML/CheckAML2_bk20210104.java=UTF-8
+encoding//src/Sale/AML/CheckAML2_bk20210126.java=UTF-8
 encoding//src/\u6536\u6B3E_\u63DB\u540D_btnRiskCheck.java=UTF-8
 encoding//src/\u6536\u6B3E_\u8CFC\u5C4B\u8B49\u660E\u55AE_btnRiskCheck.java=UTF-8
 encoding//src/\u767C\u7968_\u6298\u8B93\u4F5C\u5EE2.java=UTF-8
